[package]
name = "yuaidb"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
ahash = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"

[lib]
name = "yuaidb"
path = "src/lib.rs"

[[bin]]
name = "yuaidb"
path = "src/main.rs"

[profile.release]
opt-level = 3
