[package]
name = "yuaidb"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
ahash = "0.8.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
colored = "3.0"


[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lib]
name = "yuaidb"
path = "src/lib.rs"

[[bin]]
name = "yuaidb"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Минимальный размер кода
lto = true       # Link Time Optimization (оптимизация при линковке)
strip = true     # Убираем символы отладки (Cargo 1.60+)
panic = "abort"  # Отключаем unwinding
codegen-units = 1 # Улучшает оптимизацию, но увеличивает время компиляции
